test/error/ast/CaseExprWrongType.mod
MODULE CaseExprWrongType;
VAR r: REAL;
BEGIN
  CASE r OF
  | 0: 
  END;
END CaseExprWrongType.
